--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,10 +12,16 @@
     "react-dom": "^16.10.2",
     "react-google-maps": "9.4.5",
     "react-notification-system": "0.2.17",
+    "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.0",
-    "react-toggle": "4.0.2"
+    "react-toggle": "4.0.2",
+    "reactotron-react-js": "^3.3.5",
+    "reactotron-redux": "^3.1.2",
+    "reactotron-redux-saga": "^4.2.2",
+    "redux": "^4.0.4",
+    "redux-saga": "^1.1.1"
   },
   "devDependencies": {
     "@types/googlemaps": "3.30.19",
