--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -3,6 +3,7 @@
   "version": "1.3.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "3.3.7",
     "chartist": "0.10.1",
     "node-sass": "4.12.0",
@@ -18,6 +19,7 @@
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.0",
+    "react-select": "^3.0.8",
     "react-toggle": "4.0.2",
     "reactotron-react-js": "^3.3.5",
     "reactotron-redux": "^3.1.2",
