--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.0",
     "react-select": "^3.0.8",
+    "react-toastify": "^5.4.0",
     "react-toggle": "4.0.2",
     "reactotron-react-js": "^3.3.5",
     "reactotron-redux": "^3.1.2",
